[gd_scene load_steps=3 format=3 uid="uid://rxq0036v7twr"]

[ext_resource type="Texture2D" uid="uid://jitq6acja0tx" path="res://art/greekpuzzlearea.png" id="1_3o3qe"]
[ext_resource type="Script" uid="uid://bmx2tfx4875b" path="res://gamescenes/puzzles/puzzlesscene.gd" id="1_6h2vq"]

[node name="Puzzlesscene" type="Node2D"]
script = ExtResource("1_6h2vq")

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 1156.0
offset_bottom = 651.0
texture = ExtResource("1_3o3qe")
expand_mode = 2

[node name="reguarLook" type="Node2D" parent="."]

[node name="passwordplaque" type="Button" parent="reguarLook"]
offset_left = 459.0
offset_top = 467.0
offset_right = 609.0
offset_bottom = 518.0
text = "Password Plaque"

[node name="wallengraving" type="Button" parent="reguarLook"]
offset_left = 5.0
offset_top = 326.0
offset_right = 98.0
offset_bottom = 380.0
text = "Wall 
Engraving"

[node name="ceiling" type="Button" parent="reguarLook"]
offset_left = 194.0
offset_top = 14.0
offset_right = 387.0
offset_bottom = 112.0
text = "Ceiling 
Painting"

[node name="shadowbehindpillar" type="Button" parent="reguarLook"]
offset_left = 226.0
offset_top = 409.0
offset_right = 365.0
offset_bottom = 475.0
text = "Shadow behind
Pilar"

[node name="paperonground" type="Button" parent="reguarLook"]
offset_left = 762.0
offset_top = 566.0
offset_right = 952.0
offset_bottom = 638.0
text = "Slip of paper on ground"

[node name="closetinside" type="Button" parent="reguarLook"]
offset_left = 780.0
offset_top = 310.0
offset_right = 903.0
offset_bottom = 410.0
text = "Maintenance
Closet"

[node name="help" type="Button" parent="reguarLook"]
offset_left = 6.0
offset_top = 602.0
offset_right = 80.0
offset_bottom = 641.0
text = "HELP"

[node name="leave" type="Button" parent="reguarLook"]
offset_left = 1015.0
offset_top = 224.0
offset_right = 1120.0
offset_bottom = 344.0
text = "(Leave)"

[node name="detailedlook" type="Node2D" parent="."]

[node name="bgpanel" type="Panel" parent="detailedlook"]
offset_right = 1156.0
offset_bottom = 650.0
scale = Vector2(1, 0.99337)

[node name="custompuzzletext" type="RichTextLabel" parent="detailedlook"]
offset_left = 35.0
offset_right = 885.0
offset_bottom = 337.0
bbcode_enabled = true
text = "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."

[node name="choiceholder" type="HBoxContainer" parent="detailedlook"]
offset_left = 37.0
offset_top = 345.0
offset_right = 844.0
offset_bottom = 577.0

[node name="op1" type="Button" parent="detailedlook/choiceholder"]
layout_mode = 2
size_flags_horizontal = 3
text = "Option1"

[node name="op2" type="Button" parent="detailedlook/choiceholder"]
layout_mode = 2
size_flags_horizontal = 3
text = "Option1"

[node name="op3" type="Button" parent="detailedlook/choiceholder"]
layout_mode = 2
size_flags_horizontal = 3
text = "Option1"

[node name="customopt" type="TextEdit" parent="detailedlook/choiceholder"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Type your response here!
Remember:
1. No capitalization. LOWERCASE ONLY
2. No punctuation.
3. Don't add unecessary spaces or anything similar."

[node name="confirmcustom" type="Button" parent="detailedlook"]
offset_left = 916.0
offset_top = 502.0
offset_right = 1090.0
offset_bottom = 602.0
text = "Confirm custom 
response."

[connection signal="pressed" from="reguarLook/passwordplaque" to="." method="_on_passwordplaque_pressed"]
[connection signal="pressed" from="reguarLook/wallengraving" to="." method="_on_wallengraving_pressed"]
[connection signal="pressed" from="reguarLook/ceiling" to="." method="_on_ceiling_pressed"]
[connection signal="pressed" from="reguarLook/shadowbehindpillar" to="." method="_on_shadowbehindpillar_pressed"]
[connection signal="pressed" from="reguarLook/paperonground" to="." method="_on_paperonground_pressed"]
[connection signal="pressed" from="reguarLook/closetinside" to="." method="_on_closetinside_pressed"]
[connection signal="pressed" from="reguarLook/help" to="." method="_on_help_pressed"]
[connection signal="pressed" from="reguarLook/leave" to="." method="_on_leave_pressed"]
[connection signal="pressed" from="detailedlook/confirmcustom" to="." method="_on_confirmcustom_pressed"]
